--- a/hobbies.html
+++ b/hobbies.html
@@ -9,6 +9,6 @@
     <ol>
       <li>Beer brewing</li>
     </ol>
-    <a href="RobertsPortfolio.html">Home</a>
+    <a href="index.html">Home</a>
   </body>
 </html>
